added group param to bulk operations
